// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component --export should add to index.ts barrel 1`] = `
"export { default as Hello } from './components/hello/hello.vue';
"
`;

exports[`component --export should not export from an app 1`] = `null`;

exports[`component should generate files with jest 1`] = `
"<script setup lang="ts">
defineProps<{}>();
</script>

<template>
  <p>Welcome to Hello!</p>
</template>

<style scoped></style>
"
`;

exports[`component should generate files with jest 2`] = `
"import { mount } from '@vue/test-utils';
import Hello from './hello.vue';

describe('Hello', () => {
  it('renders properly', () => {
    const wrapper = mount(Hello, {});
    expect(wrapper.text()).toContain('Welcome to Hello');
  });
});
"
`;

exports[`component should generate files with vitest 1`] = `
"<script setup lang="ts">
defineProps<{}>();
</script>

<template>
  <p>Welcome to Hello!</p>
</template>

<style scoped></style>
"
`;

exports[`component should generate files with vitest 2`] = `
"import { describe, it, expect } from 'vitest';

import { mount } from '@vue/test-utils';
import Hello from './hello.vue';

describe('Hello', () => {
  it('renders properly', () => {
    const wrapper = mount(Hello, {});
    expect(wrapper.text()).toContain('Welcome to Hello');
  });
});
"
`;
